src/test/ui/span/multiline-span-simple.stderr
error[E0277]: cannot add `()` to `u32`
  --> $DIR/multiline-span-simple.rs:13:18
   |
LL |     foo(1 as u32 +
   |                  ^ no implementation for `u32 + ()`
   |
   = help: the trait `Add<()>` is not implemented for `u32`
   = help: the following implementations were found:
             <&'a u32 as Add<u32>>
             <&u32 as Add<&u32>>
             <u32 as Add<&u32>>
             <u32 as Add>
           and 48 others

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
